# Exchange

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  aggregateorder.cpp  aggregateorder.hpp  cmake_install.cmake  engine.cpp  engine.hpp  exchange  exchange.cpp  exchange.hpp  fifo.cpp  fifo.hpp  investor.cpp  investor.hpp  main.cpp  order.cpp  order.hpp  orderbook.cpp  orderbook.hpp  prorata.cpp  stock.cpp  stock.hpp
TestData/: orders.txt  stocks.txt
